sigar-sys/src/ffi.rs

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_thread_cpu_t {
    pub user: sigar_uint64_t,
    pub sys: sigar_uint64_t,
    pub total: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_thread_cpu_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_thread_cpu_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_thread_cpu_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_thread_cpu_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_thread_cpu_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_thread_cpu_t>())).user as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_thread_cpu_t),
            "::",
            stringify!(user)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_thread_cpu_t>())).sys as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_thread_cpu_t),
            "::",
            stringify!(sys)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_thread_cpu_t>())).total as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_thread_cpu_t),
            "::",
            stringify!(total)
        )
    );
}
extern "C" {
    pub fn sigar_thread_cpu_get(
        sigar: *mut sigar_t,
        id: sigar_uint64_t,
        cpu: *mut sigar_thread_cpu_t,
    ) -> ::std::os::raw::c_int;
}
pub const sigar_file_system_type_e_SIGAR_FSTYPE_UNKNOWN: sigar_file_system_type_e = 0;
pub const sigar_file_system_type_e_SIGAR_FSTYPE_NONE: sigar_file_system_type_e = 1;
pub const sigar_file_system_type_e_SIGAR_FSTYPE_LOCAL_DISK: sigar_file_system_type_e = 2;
pub const sigar_file_system_type_e_SIGAR_FSTYPE_NETWORK: sigar_file_system_type_e = 3;
pub const sigar_file_system_type_e_SIGAR_FSTYPE_RAM_DISK: sigar_file_system_type_e = 4;
pub const sigar_file_system_type_e_SIGAR_FSTYPE_CDROM: sigar_file_system_type_e = 5;
pub const sigar_file_system_type_e_SIGAR_FSTYPE_SWAP: sigar_file_system_type_e = 6;
pub const sigar_file_system_type_e_SIGAR_FSTYPE_MAX: sigar_file_system_type_e = 7;
pub type sigar_file_system_type_e = u32;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_file_system_t {
    pub dir_name: [::std::os::raw::c_char; 1024usize],
    pub dev_name: [::std::os::raw::c_char; 1024usize],
    pub type_name: [::std::os::raw::c_char; 256usize],
    pub sys_type_name: [::std::os::raw::c_char; 256usize],
    pub options: [::std::os::raw::c_char; 256usize],
    pub type_: sigar_file_system_type_e,
    pub flags: ::std::os::raw::c_ulong,
}
#[test]
fn bindgen_test_layout_sigar_file_system_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_file_system_t>(),
        2832usize,
        concat!("Size of: ", stringify!(sigar_file_system_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_file_system_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_file_system_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_t>())).dir_name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_t),
            "::",
            stringify!(dir_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_t>())).dev_name as *const _ as usize },
        1024usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_t),
            "::",
            stringify!(dev_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_t>())).type_name as *const _ as usize },
        2048usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_t),
            "::",
            stringify!(type_name)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_file_system_t>())).sys_type_name as *const _ as usize
        },
        2304usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_t),
            "::",
            stringify!(sys_type_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_t>())).options as *const _ as usize },
        2560usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_t),
            "::",
            stringify!(options)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_t>())).type_ as *const _ as usize },
        2816usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_t),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_t>())).flags as *const _ as usize },
        2824usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_t),
            "::",
            stringify!(flags)
        )
    );
}
impl Default for sigar_file_system_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sigar_file_system_list_t {
    pub number: ::std::os::raw::c_ulong,
    pub size: ::std::os::raw::c_ulong,
    pub data: *mut sigar_file_system_t,
}
#[test]
fn bindgen_test_layout_sigar_file_system_list_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_file_system_list_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_file_system_list_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_file_system_list_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_file_system_list_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_list_t>())).number as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_list_t),
            "::",
            stringify!(number)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_list_t>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_list_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_list_t>())).data as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_list_t),
            "::",
            stringify!(data)
        )
    );
}
impl Default for sigar_file_system_list_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_file_system_list_get(
        sigar: *mut sigar_t,
        fslist: *mut sigar_file_system_list_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_file_system_list_destroy(
        sigar: *mut sigar_t,
        fslist: *mut sigar_file_system_list_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_disk_usage_t {
    pub reads: sigar_uint64_t,
    pub writes: sigar_uint64_t,
    pub write_bytes: sigar_uint64_t,
    pub read_bytes: sigar_uint64_t,
    pub rtime: sigar_uint64_t,
    pub wtime: sigar_uint64_t,
    pub qtime: sigar_uint64_t,
    pub time: sigar_uint64_t,
    pub snaptime: sigar_uint64_t,
    pub service_time: f64,
    pub queue: f64,
}
#[test]
fn bindgen_test_layout_sigar_disk_usage_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_disk_usage_t>(),
        88usize,
        concat!("Size of: ", stringify!(sigar_disk_usage_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_disk_usage_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_disk_usage_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).reads as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(reads)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).writes as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(writes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).write_bytes as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(write_bytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).read_bytes as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(read_bytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).rtime as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(rtime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).wtime as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(wtime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).qtime as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(qtime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).time as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).snaptime as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(snaptime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).service_time as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(service_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_disk_usage_t>())).queue as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_disk_usage_t),
            "::",
            stringify!(queue)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_file_system_usage_t {
    pub disk: sigar_disk_usage_t,
    pub use_percent: f64,
    pub total: sigar_uint64_t,
    pub free: sigar_uint64_t,
    pub used: sigar_uint64_t,
    pub avail: sigar_uint64_t,
    pub files: sigar_uint64_t,
    pub free_files: sigar_uint64_t,
}
